force-app/main/default/objects/Opportunity/fields/Annualized_Sales__c.field-meta.xml
<CustomField>
    <fullName>Annualized_Sales__c</fullName>
    <description>Estimated annual sales associated with this opportunity in USD.</description>
    <label>Est. Annualized Sales (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>