force-app/main/default/objects/Opportunity/fields/Annualized_Sales_For__c.field-meta.xml
<CustomField>
    <fullName>Annualized_Sales_For__c</fullName>
    <formula>Annualized_Sales__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Annualized Sales For</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>