force-app/main/default/objects/Opportunity/fields/Assessment_Approved__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Assessment Approved</label>
    <type>Checkbox</type>
</CustomField>