force-app/main/default/objects/Opportunity/fields/Assessment_Bypassed__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Bypassed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Assessment Bypassed</label>
    <type>Checkbox</type>
</CustomField>