force-app/main/default/objects/Opportunity/fields/Assessment_Pending__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Pending__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Assessment Pending</label>
    <type>Checkbox</type>
</CustomField>