force-app/main/default/objects/Opportunity/fields/Assessment_Rejected__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Rejected__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Assessment Rejected</label>
    <type>Checkbox</type>
</CustomField>