force-app/main/default/objects/Opportunity/fields/Attachments_Populated__c.field-meta.xml
<CustomField>
    <fullName>Attachments_Populated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Attachments Populated</label>
    <type>Checkbox</type>
</CustomField>