force-app/main/default/objects/Opportunity/fields/EBITDA__c.field-meta.xml
<CustomField>
    <fullName>EBITDA__c</fullName>
    <description>Initial estimated EBITDA %. This shall be refined during quoting process.</description>
    <label>Est. EBITDA %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>