force-app/main/default/objects/Opportunity/fields/Has_Been_Submitted_For_Assessment__c.field-meta.xml
<CustomField>
    <fullName>Has_Been_Submitted_For_Assessment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Been Submitted For Assessment</label>
    <type>Checkbox</type>
</CustomField>