force-app/main/default/objects/Opportunity/fields/Merge_Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Merge_Owner_Name__c</fullName>
    <formula>Owner.FirstName &amp; &quot; &quot; &amp; Owner.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Merge_Owner_Name</label>
    <type>Text</type>
</CustomField>