force-app/main/default/objects/Opportunity/fields/No_Quote_Reason__c.field-meta.xml
<CustomField>
    <fullName>No_Quote_Reason__c</fullName>
    <label>No Quote Reason</label>
    <type>TextArea</type>
</CustomField>