force-app/main/default/objects/Opportunity/fields/Number_of_Related_Quotes__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Related_Quotes__c</fullName>
    <label>Number of Related Quotes</label>
    <summaryForeignKey>Quote.OpportunityId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>