force-app/main/default/objects/Opportunity/fields/Rejection_Reason__c.field-meta.xml
<CustomField>
    <fullName>Rejection_Reason__c</fullName>
    <label>Rejection Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Volume not sufficient</fullName>
            </value>
            <value>
                <fullName>Margin is not sufficient</fullName>
            </value>
            <value>
                <fullName>Not Aligned with Business Strategy</fullName>
            </value>
            <value>
                <fullName>Lack of capacity</fullName>
            </value>
            <value>
                <fullName>Lack of capability</fullName>
            </value>
            <value>
                <fullName>Needs more information</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Margin not Met</fullName>
                <isActive>false</isActive>
                <label>Margin not Met</label>
            </value>
            <value>
                <fullName>Not Aligned with Product Strategy</fullName>
                <isActive>false</isActive>
                <label>Not Aligned with Product Strategy</label>
            </value>
            <value>
                <fullName>Volume Too Low</fullName>
                <isActive>false</isActive>
                <label>Volume Too Low</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>