force-app/main/default/objects/Opportunity/fields/RFQ_Requested_Date__c.field-meta.xml
<CustomField>
    <fullName>RFQ_Requested_Date__c</fullName>
    <label>RFQ Requested Date</label>
    <type>Date</type>
</CustomField>