force-app/main/default/objects/Opportunity/fields/RFQ_Submission_Comments__c.field-meta.xml
<CustomField>
    <fullName>RFQ_Submission_Comments__c</fullName>
    <label>RFQ Submission Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>