force-app/main/default/objects/Opportunity/fields/Sample_Sent__c.field-meta.xml
<CustomField>
    <fullName>Sample_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sample Sent</label>
    <type>Checkbox</type>
</CustomField>