force-app/main/default/objects/Opportunity/recordTypes/Filtration.recordType-meta.xml
<RecordType>
    <fullName>Filtration</fullName>
    <active>true</active>
    <businessProcess>Filtration Sales Process</businessProcess>
    <label>Filtration</label>
</RecordType>