force-app/main/default/objects/Opportunity/recordTypes/Healthcare.recordType-meta.xml
<RecordType>
    <fullName>Healthcare</fullName>
    <active>true</active>
    <businessProcess>Healthcare Sales Process</businessProcess>
    <label>Healthcare</label>
</RecordType>