force-app/main/default/objects/Opportunity/validationRules/Close_Won_PDF_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Close_Won_PDF_Rule</fullName>
    <active>true</active>
    <description>Ensures that an opportunity has an attached PDF before moving to &#39;Closed Awarded&#39;.</description>
    <errorConditionFormula>AND(
ISPICKVAL(StageName, &quot;Closed Won&quot;),
NOT(Attachments_Populated__c)
)</errorConditionFormula>
    <errorMessage>Please ensure there is a Purchase Order PDF generated and attached before moving to &#39;Closed Won&#39;</errorMessage>
</ValidationRule>