force-app/main/default/objects/Opportunity/validationRules/Closed_Lost_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Closed_Lost_Rule</fullName>
    <active>true</active>
    <description>Ensures there is a lost reason</description>
    <errorConditionFormula>AND(
    ISPICKVAL(StageName, &quot;Closed Lost&quot;),
    ISBLANK(Closed_Lost_Reason__c)
)</errorConditionFormula>
    <errorMessage>Please ensure you have a Closed Lost Reason before closing an opportunity</errorMessage>
</ValidationRule>