force-app/main/default/objects/Opportunity/validationRules/Default_Sales_Process_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Default_Sales_Process_Validation</fullName>
    <active>true</active>
    <description>Defaults the user to select the &#39;New Request&#39; stage</description>
    <errorConditionFormula>AND(
    ISNEW(),                          
    NOT(ISPICKVAL(StageName, &#39;New Request&#39;))  
)</errorConditionFormula>
    <errorDisplayField>StageName</errorDisplayField>
    <errorMessage>Please select the stage &#39;New Request&#39; for a new Opportunity</errorMessage>
</ValidationRule>