force-app/main/default/objects/Opportunity/validationRules/Filtration_Prevent_Quote_Status_Update.validationRule-meta.xml
<ValidationRule>
    <fullName>Filtration_Prevent_Quote_Status_Update</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    OR(
        ISPICKVAL(StageName, &quot;Quote Ready&quot;),
        ISPICKVAL(StageName, &quot;Customer Review&quot;),
        ISPICKVAL(StageName, &quot;Negotiation&quot;),
        ISPICKVAL(StageName, &quot;Awarded&quot;),
        ISPICKVAL(StageName, &quot;Closed&quot;)
    ),
    Number_of_Related_Quotes__c = 0
)</errorConditionFormula>
    <errorMessage>The Opportunity cannot progress without having at least one related Quote. Utilize the &quot;Create Quote&quot; button below.</errorMessage>
</ValidationRule>