force-app/main/default/objects/Opportunity/validationRules/Quote_Ready_Lock.validationRule-meta.xml
<ValidationRule>
    <fullName>Quote_Ready_Lock</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(PRIORVALUE(StageName), &quot;Quote Ready&quot;),
    ISPICKVAL(StageName, &quot;Customer Review&quot;),
    ISPICKVAL(Business__c, &quot;Filtration&quot;),
    NOT(Attachments_Populated__c)
)</errorConditionFormula>
    <errorMessage>Please ensure there is a Quote and PDF Template attached.</errorMessage>
</ValidationRule>