force-app/main/default/objects/Opportunity/validationRules/RFQ_Requested_Lock.validationRule-meta.xml
<ValidationRule>
    <fullName>RFQ_Requested_Lock</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
  ISPICKVAL(StageName, &#39;New Request&#39;),
  NOT(
    AND(
      ISPICKVAL(PRIORVALUE(StageName), &#39;New Request&#39;),
      ISPICKVAL(StageName, &#39;RFQ Requested&#39;),
      Assessment_Approved__c
    )
  )
)</errorConditionFormula>
    <errorMessage>Please select the stage &#39;RFQ Requested&#39; after your &#39;New Request&#39; is approved.</errorMessage>
</ValidationRule>